--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>golang-wails-desktop-app-example</title>
+    <title>Downloader</title>
 </head>
 
 <body>
