--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <script type="text/javascript">
+        window.global = window;
+    </script>
     <div id="root"></div>
     <script src="./src/main.tsx" type="module"></script>
 </body>
